# Model-Context-Protocol-MCP-

./: .gitignore  README.md  docker_mcp.text
Langchain MCP client using langchain MCP adaptors/: langchain_mcp_client_README.md  langchain_mcp_openai_client.py  pyproject.toml
MCP client with multiple server support/: config.json  langchain_mcp_openai_client_with_config.py  mcp_multiple_server_README.md  pyproject.toml  requirements.txt
Projects/StoryForge_agent/: StoryForge_README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
Projects/StoryForge_agent/functions/: get_realtime_info.py  get_video_transcription.py
Projects/clinisight_AI_agent/: app.py  clinsight_README.md  main.py  mcp_server.py  pyproject.toml
Projects/clinisight_AI_agent/functions/: diagnose_symptoms.py  pubmed_articles.py  summarize_pubmed.py  symptoms_extractor.py
Projects/job_recommender_tool/: README.md  app.py  mcp_server.py  pyproject.toml
Projects/job_recommender_tool/src/: helper.py  job_api.py
Projects/weather_mcp_tool/: README.md  main.py  pyproject.toml
Projects/weather_mcp_tool/tools/: weather.py
SSE_MCP/SSE_server/: .dockerignore  Dockerfile  README.md  pyproject.toml  sse_server.py
docker mcp server/server/terminal_server/: docker_server_README.md  pyproject.toml  terminal_server.py
mcp/clients/mcp_client/: .env  .gitignore  client.py  client_README.md  client_README.txt  openai_client.py  pyproject.toml  requirements.txt
mcp/servers/terminal_server/: pyproject.toml  readme.txt  (+1 more)
mcp/workspace/: docker_mcp.txt  langchain_mcp_test.txt  mcp_client_test.txt
(+1 files in other folders)
